--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/marked@14.1.2/lib/marked.umd.min.js"></script>
+  <script src="/js/libs/bootstrap-5.3.3.js"></script>
+  <script src="/js/libs/marked-14.1.2.js"></script>
   <script src="/js/main.js" type="module"></script>
 </body>
 
