--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Classic Artists</title>
+  <title>The Music Vault</title>
   <link rel="icon" href="/images/favicon.png">
   <link rel="stylesheet" href="/css/style.css">
 </head>
