Improving usability after Lighthouse Report

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,6 +10,7 @@
   <title>The Music Vault</title>
   <link rel="icon" href="/images/favicon.png">
   <link rel="stylesheet" href="/css/style.css">
+  <meta name="description" content="A music vault for artists and albums.">
 </head>
 
 <body>
